Complete remote autocomplete for invoices
